--- a/static/css/style.css
+++ b/static/css/style.css
@@ -153,6 +153,34 @@ ul.address-text p {
 	border: none;
 }
 
+#info-text {
+    display: none;
+    position: absolute;
+    margin-left: 10px;
+    color: white;
+    font-size: 24px;
+	z-index: 11;
+	line-height: 28px;
+}
+
+/* 遮罩层样式 */
+#overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* 半透明黑色 */
+    z-index: 10; /* 确保在最上层 */
+}
+
+/* 高亮info按钮的样式 */
+.icon-button.highlight {
+    border: 3px solid RED;
+    position: relative; /* 添加这一行来使 z-index 生效 */
+    z-index: 11;
+}
 /* table相关 */
 table {
 	background-color: #dddddd;
@@ -257,6 +285,7 @@ input[type=range]{
 	outline: none !important;
 	-webkit-appearance: none;/*清除系统默认样式*/
 	background-color: #b3ddff !important;
+	z-index: 0!important;
 }
 /*自定义滑动控件的滑块*/
 .noUi-handle, 
