--- a/templates/list.html
+++ b/templates/list.html
@@ -153,7 +153,7 @@
             // $("#citations").text(fieldlabel + " Paper Citations ");
             // $("#h-index").text("h-index (" + fieldlabel + ") ");
             $("#paperCount").append(content.replace('$$content$$', questionContent));
-            $("#corePaperCount").append(content.replace('$$content$$', 'Core paper is calculated with "isKeyPaper" > 0.5'))
+            $("#corePaperCount").append(content.replace('$$content$$', "Core paper = first-author paper or advisee's first-author paper"));
 
             scholarList.sort(compare("paperCount", "asc"));
             displayPagination();
