--- a/templates/front.html
+++ b/templates/front.html
@@ -26,7 +26,7 @@
                 </a>
 				<a id="VCGLink" class="custom-button" href="search?field=VCG">
                     <i class="fa-brands fa-codepen"></i>
-                    Graphics&Visualization
+                    Graphics
                 </a>
 				<a id="NLPLink" class="custom-button" href="search?field=acl" style="margin-left: 30px;">
                     <i class="fa-solid fa-pencil icon"></i>
