--- a/templates/search.html
+++ b/templates/search.html
@@ -87,7 +87,7 @@ and see our <a href="/reference">KDD/VIS/NeurIPS 2023 papers</a> for more detail
 				acl: "NLP",
 				visualization: "Visualization",
 				database: "Database/Data Science",
-				VCG: "Graphics/Visualization"
+				VCG: "Graphics"
 			};
 			$("#scholar-field").text(`${fieldDict[fieldType]} Scholar`);
 			
