add the method to identify IP

--- a/templates/degree.html
+++ b/templates/degree.html
@@ -322,7 +322,7 @@ function compare(index, sortType) {
 
 // Function to calculate the sum of corresponding values
 function calculateSum(inputStrings) {
-    console.log('sum', inputStrings)
+    // console.log('sum', inputStrings)
     const sumObject = {};
     inputStrings.forEach(inputString => {
         const parts = inputString.split(' / ');
@@ -827,6 +827,8 @@ async function loadAuthorsData() {
         // Filter nodes and edges based on given probabilities
         let filteredNodes = data.nodes.filter(node => node.isKeyPaper >= nodeProbFilter);
         let filteredEdges = data.edges.filter(edge => edge.prob >= edgeProbFilter);
+        if (removeSurvey) filteredNodes = filteredNodes.filter(node => !node.survey);
+
         // Compute indegree, outdegree, and total degree
         let indegree = {}, outdegree = {}, totaldegree = {};
         // set other nodes in filteredNodes outdegree/indegree =0
@@ -835,8 +837,7 @@ async function loadAuthorsData() {
             indegree[node.paperID] = 0;
             totaldegree[node.paperID] = 0;
         })
-
-        if (removeSurvey) filteredNodes = filteredNodes.filter(node => !node.survey);
+        
         let nodeSet = new Set(filteredNodes.map(node => node.paperID));
         
         let edgeCount = 0;
@@ -852,11 +853,14 @@ async function loadAuthorsData() {
                 connectedEdges.push(edge);
             }
         });
+        filteredEdges = connectedEdges;
 
         let connectedNodes = filteredNodes.filter(node => totaldegree[node.paperID] > 0);
         if (removeIsolated) {
+            
             for (let node of filteredNodes) {
                 if (totaldegree[node] == 0) {
+                    console.log('remove isolated!!!')
                     delete outdegree[node];
                     delete indegree[node];
                     delete totaldegree[node];
