update url param from VCG to CG

--- a/templates/front.html
+++ b/templates/front.html
@@ -22,9 +22,9 @@
             <div style="display: inline;">
 				<a id="databaseLink" class="custom-button" href="search?field=database">
                     <i class="fa-solid fa-database"></i>
-                    Database&Data Science
+                    Database & Data Science
                 </a>
-				<a id="VCGLink" class="custom-button" href="search?field=VCG">
+				<a id="CGLink" class="custom-button" href="search?field=CG">
                     <i class="fa-brands fa-codepen"></i>
                     Graphics
                 </a>
