--- a/templates/index.html
+++ b/templates/index.html
@@ -313,7 +313,7 @@
                     </li>
                     <li>
                         <ul class="address-text">
-                            <li style="width: 80%; margin-top: 3%;"><b style="margin-top: 10%; margin-left: 13%;">core paper prob. ({{ name }})</b></li>
+                            <li style="width: 80%; margin-top: 3%;"><b style="margin-top: 10%; margin-left: 13%;">core paper prob.</b></li>
                             <li id="paper-prob" style="color: #333; width: 10%; margin-top: 3%;"></li>
                         </ul>
                     </li>
