--- a/templates/search.html
+++ b/templates/search.html
@@ -86,8 +86,8 @@ and see our <a href="/reference">KDD/VIS/NeurIPS 2023 papers</a> for more detail
 			const fieldDict = {
 				acl: "NLP",
 				visualization: "Visualization",
-				database: "Database/Data Science",
-				VCG: "Graphics"
+				database: "Database & Data Science",
+				CG: "Graphics"
 			};
 			$("#scholar-field").text(`${fieldDict[fieldType]} Scholar`);
 			
