add the description of the list page which field is shown

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -418,3 +418,12 @@ input[type=range]::-webkit-slider-thumb {
 	background-color: #b3ddff;
 	transition: background-color 0.3s;
 }
+
+/* h1文本底部对齐 */
+h1 {
+	display: inline-block;
+	color: white; 
+	margin-bottom: 0;
+	vertical-align: bottom;
+	line-height: normal;
+}
