--- a/templates/index.html
+++ b/templates/index.html
@@ -597,7 +597,7 @@ $(function () {
         $("#info").click(function(){
             if (image_switch == 0) {
                 reset_graph();
-                draw_tag_cloud();
+                // draw_tag_cloud();
             }
             else {
                 $.ajax({
